--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -3,8 +3,8 @@
     <div class='container'>
       <div class='nav-collapse collapse'>
         <ul class='nav'>
-          <li>{{#linkTo 'index'}}Home{{/linkTo}}</li>
-          <li>{{#linkTo 'users'}}Users{{/linkTo}}</li>
+          <li>{{#link-to 'index'}}Home{{/link-to}}</li>
+          <li>{{#link-to 'users'}}Users{{/link-to}}</li>
         </ul>
       </div>
     </div>
