add users/show route
finish part 2 of guide.

--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -5,5 +5,15 @@
       <th>ID</th>
       <th>Name</th>
     </tr>
+    {{#each controller}}
+      <tr>
+        <td>{{id}}</td>
+        <td>{{#link-to "users.show" this}}{{fullName}}{{/link-to}}</td>
+      </tr>
+    {{/each}}
   </table>
+</div>
+
+<div class="span8">
+  {{outlet}}
 </div>
